py2o2/src/parser/snapshots/py2o2__parser__stmt__test__parse_arg-2.snap
---
source: py2o2/src/parser/stmt.rs
expression: "arg(\"a: T\").finish().unwrap()"
---
(
    "",
    Arg {
        name: Identifier {
            components: [
                "a",
            ],
        },
        ty: Some(
            Name(
                Identifier {
                    components: [
                        "T",
                    ],
                },
            ),
        ),
        default: None,
    },
)
