py2o2/src/parser/snapshots/py2o2__parser__stmt__test__parse_arg-4.snap
---
source: py2o2/src/parser/stmt.rs
expression: "arg(\"a = None\").finish().unwrap()"
---
(
    "",
    Arg {
        name: Identifier {
            components: [
                "a",
            ],
        },
        ty: None,
        default: Some(
            None,
        ),
    },
)
