py2o2/src/parser/snapshots/py2o2__parser__stmt__test__parse_assign-2.snap
---
source: py2o2/src/parser/stmt.rs
expression: "assign(\"a: int = 1\").finish().unwrap()"
---
(
    "",
    Assign {
        targets: [
            Name {
                id: Identifier {
                    components: [
                        "a",
                    ],
                },
            },
        ],
        value: Constant {
            value: Float(
                1.0,
            ),
        },
        type_comment: Some(
            Name(
                Identifier {
                    components: [
                        "int",
                    ],
                },
            ),
        ),
    },
)
