py2o2/src/parser/snapshots/py2o2__parser__stmt__test__parse_assign.snap
---
source: py2o2/src/parser/stmt.rs
expression: "assign(\"a = 1\").finish().unwrap()"
---
(
    "",
    Assign {
        targets: [
            Name {
                id: "a",
            },
        ],
        value: Constant {
            value: Float(
                1.0,
            ),
        },
        type_comment: None,
    },
)
