py2o2/src/parser/snapshots/py2o2__parser__stmt__test__parse_class_def.snap
---
source: py2o2/src/parser/stmt.rs
expression: "class_def(r#\"\n            class A:\n                ...\n            \"#.trim()).finish().unwrap()"
---
(
    "",
    ClassDef {
        name: "A",
        bases: [],
        keywords: [],
        body: [
            Expr(
                Ellipsis,
            ),
        ],
    },
)
