py2o2/src/parser/snapshots/py2o2__parser__stmt__test__parse_function_def.snap
---
source: py2o2/src/parser/stmt.rs
expression: "function_def(r#\"\n            def f(a, b):\n                ...\n            \"#.trim()).finish().unwrap()"
---
(
    "",
    FunctionDef {
        name: Identifier {
            components: [
                "f",
            ],
        },
        args: [
            Arg {
                name: Identifier {
                    components: [
                        "a",
                    ],
                },
                ty: None,
                default: None,
            },
            Arg {
                name: Identifier {
                    components: [
                        "b",
                    ],
                },
                ty: None,
                default: None,
            },
        ],
        type_: None,
    },
)
