py2o2/src/parser/snapshots/py2o2__parser__stmt__test__parse_import-2.snap
---
source: py2o2/src/parser/stmt.rs
expression: "import_from(\"from numpy import array\").finish().unwrap()"
---
(
    "",
    ImportFrom {
        module: "numpy",
        names: [
            Alias {
                name: "array",
                asname: None,
            },
        ],
    },
)
